[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyPath.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 72, -15, 0, 0, 0, 0, -69, -15, 0, 0, 0, 0, 7, 95, 0, 0, 0, 0, 72, -15 )
}

[sub_resource type="CircleShape2D" id=5]
radius = 203.158

[sub_resource type="CircleShape2D" id=7]
radius = 87.0057

[sub_resource type="CircleShape2D" id=8]
radius = 28.1111

[node name="Path2D" type="Path2D"]
position = Vector2( 69.0001, 120 )
scale = Vector2( 0.4, 0.4 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( 72, -15 )
rotate = false
lookahead = 0.001
script = ExtResource( 2 )
runSpeed = 2

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
modulate = Color( 0.909804, 0.635294, 0.345098, 1 )
texture = ExtResource( 1 )

[node name="PlayerFollowCheck" type="Area2D" parent="PathFollow2D/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Sprite/PlayerFollowCheck"]
shape = SubResource( 5 )

[node name="AttackArea" type="Area2D" parent="PathFollow2D/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Sprite/AttackArea"]
shape = SubResource( 7 )

[node name="DamageArea" type="Area2D" parent="PathFollow2D/Sprite" groups=["DashTarget"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Sprite/DamageArea"]
shape = SubResource( 8 )

[connection signal="body_entered" from="PathFollow2D/Sprite/PlayerFollowCheck" to="PathFollow2D" method="_on_PlayerFollowCheck_body_entered"]
[connection signal="body_exited" from="PathFollow2D/Sprite/PlayerFollowCheck" to="PathFollow2D" method="_on_PlayerFollowCheck_body_exited"]
[connection signal="body_entered" from="PathFollow2D/Sprite/AttackArea" to="PathFollow2D" method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="PathFollow2D/Sprite/AttackArea" to="PathFollow2D" method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="PathFollow2D/Sprite/DamageArea" to="PathFollow2D" method="_on_DamageArea_body_entered"]
